--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 PORT=":5003"
 APP_NAME=eae_dev
-PGREST_SECRET=
+JWT_SECRET=
+MAC_SECRET_KEY=
 CALLBACK_URL=
-RW_API_KEY=
-DATABASE_URI=postgresql://postgres:postgres@localhost:5432/eae_dev
