.env variable naming and missing values

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PORT=":5003"
-APP_NAME=eae_dev
 JWT_SECRET=
-MAC_SECRET_KEY=
+EAE_API_URL=
 CALLBACK_URL=
+APP_NAME=
+AUTHENTICATOR_PSK=
+SOCKET=/tmp/authenticator.sock
